manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  labels:
    name: myingress
spec:
  rules:
  - host: retwit.app.dev
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend-service
            port: 
              number: 4200
